--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://adventuremediaco.github.io/Trail-dOnline-How-to-Pick-a-Spare-Tire-Water-Tank-for-Overlanding-Key-Considerations/">https://adventuremediaco.github.io/Trail-dOnline-How-to-Pick-a-Spare-Tire-Water-Tank-for-Overlanding-Key-Considerations/</a><br>
+                <a target="_bLank" href="https://traildonline.s3.us-east-005.backblazeb2.com/How+to+Pick+a+Spare+Tire+Water+Tank+for+Overlanding:+Key+Considerations/index.html">https://traildonline.s3.us-east-005.backblazeb2.com/How+to+Pick+a+Spare+Tire+Water+Tank+for+Overlanding:+Key+Considerations/index.html</a><br>
+                <a target="_bLank" href="https://trail-d-online-how-to-pic-git-04ccb5-adventuremediacos-projects.vercel.app/">https://trail-d-online-how-to-pic-git-04ccb5-adventuremediacos-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://golden-dango-8d4bc6.netlify.app">https://golden-dango-8d4bc6.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
